frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: webapp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: hashicorp/http-echo
        args:
        - "-text=Hello from FRONTEND"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: webapp-demo
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 5678
