ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-live
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test.patagium.eu
    secretName: test-patagium-eu-tls
  rules:
  - host: test.patagium.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
